--- a/src/pantallas/AltaPuesto.form
+++ b/src/pantallas/AltaPuesto.form
@@ -82,25 +82,21 @@
                           <Component id="jScrollPane1" min="-2" pref="690" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <EmptySpace min="58" pref="58" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                           <Component id="jScrollPane3" min="-2" pref="400" max="-2" attributes="0"/>
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="btnAddAll" alignment="0" min="-2" pref="97" max="-2" attributes="0"/>
+                              <Component id="btnRemoveAll" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <EmptySpace min="31" pref="31" max="-2" attributes="0"/>
-                                  <Component id="btnAdd" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="30" pref="30" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="btnAdd" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="btnRemove" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="31" pref="31" max="-2" attributes="0"/>
-                                  <Component id="btnRemove" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="11" pref="11" max="-2" attributes="0"/>
-                                  <Component id="btnAddAll" min="-2" pref="97" max="-2" attributes="0"/>
-                              </Group>
-                              <Component id="btnRemoveAll" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="9" pref="9" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="593" max="-2" attributes="0"/>
                           <Component id="jScrollPane4" min="-2" pref="355" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
@@ -110,7 +106,7 @@
                           <Component id="cancelar" min="-2" pref="145" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="191" pref="76" max="32767" attributes="0"/>
+                  <EmptySpace min="191" pref="-519" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
